force-app/main/default/objects/breg_Test_Annual__c/breg_Test_Annual__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-60</description>
    <label>Test Annual</label>
    <nameField>
        <displayFormat>Test Annual-{000000000}</displayFormat>
        <label>Test Annual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Annuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>