force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-60</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Annuals</relationshipLabel>
    <relationshipName>Test_Annuals</relationshipName>
    <type>Lookup</type>
</CustomField>