force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Account_Name__c</fullName>
    <formula>breg_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>