force-app/main/default/objects/breg_Test_Annual__c/fields/breg_BRIM_BATCH_HISTORY__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_BATCH_HISTORY__c</fullName>
    <description>Legacy BRIM BATCH HISTORY</description>
    <label>BRIM BATCH HISTORY</label>
    <type>TextArea</type>
</CustomField>