force-app/main/default/objects/breg_Test_Annual__c/fields/breg_BRIM_INCORPORATION_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_INCORPORATION_DT__c</fullName>
    <label>BRIM INCORPORATION DT</label>
    <type>Date</type>
</CustomField>