force-app/main/default/objects/breg_Test_Annual__c/fields/breg_BRIM_MASTER_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_MASTER_NAME__c</fullName>
    <label>BRIM MASTER NAME</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>