force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>breg_Fees_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-60</description>
    <label>Fees Paid?</label>
    <type>Checkbox</type>
</CustomField>