force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Date__c</fullName>
    <description>Aalta BREG-60</description>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>