force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Filing_Year__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Year__c</fullName>
    <description>Aalta BREG-60</description>
    <label>Filing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>