force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Penalty__c.field-meta.xml
<CustomField>
    <fullName>breg_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-60</description>
    <label>Penalty?</label>
    <type>Checkbox</type>
</CustomField>