force-app/main/default/objects/breg_Test_Annual__c/fields/breg_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Status__c</fullName>
    <description>Aalta BREG-60</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>Not Filed</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Delinquent</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Processed</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Pending Resub</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Zero</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Held</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>