force-app/main/default/objects/breg_Test_Annual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>breg_Status__c</columns>
    <columns>breg_Filing_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>